...
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/linearLayout">

  <Button
    android:id="@+id/track_button"
    android:layout_width="180dp"
    android:layout_height="54dp"
...
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/notes_edittext"/>

  <TextView
...

  <Spinner
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="48dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_1"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_7"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_2"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_6"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_3"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_5"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_4"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_4"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_5"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_3"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_6"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_2"
            android:layout_width="70dp"
            android:layout_height="100dp"
...

        <LinearLayout
          android:id="@+id/vertical_layout_7"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
...

          <TextView
            android:id="@+id/textview_day_1"
            android:layout_width="70dp"
            android:layout_height="100dp"
...
