...
  <string name="menubar_activity">Activity</string>
  <string name="menubar_plan">Plan</string>
  <string name="plan_note_view_done">Done</string>
  <string name="plan_note_view_no_notes">Nothing.</string>
  <string name="plan_month_progress_textview">Month Progress</string>
  <string name="plan_center_day_textview"> </string>
  <string name="plan_track_button">TRACK</string>
  <string name="plan_notes_edittext">Notes here</string>
  <string-array name="months_array">
    <item>January</item>
    <item>February</item>
    <item>March</item>
    <item>April</item>
...
